crates/murphy-plugin-macros/tests/ui/fail_non_cop_type.stderr
error[E0277]: the trait bound `NotACop: Cop` is not satisfied
 --> tests/ui/fail_non_cop_type.rs:7:38
  |
7 | murphy_plugin_macros::register_cops!(NotACop);
  |                                      ^^^^^^^ unsatisfied trait bound
  |
help: the trait `Cop` is not implemented for `NotACop`
 --> tests/ui/fail_non_cop_type.rs:5:1
  |
5 | struct NotACop;
  | ^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotACop: NodeCop` is not satisfied
 --> tests/ui/fail_non_cop_type.rs:7:38
  |
7 | murphy_plugin_macros::register_cops!(NotACop);
  |                                      ^^^^^^^ unsatisfied trait bound
  |
help: the trait `NodeCop` is not implemented for `NotACop`
 --> tests/ui/fail_non_cop_type.rs:5:1
  |
5 | struct NotACop;
  | ^^^^^^^^^^^^^^
note: required by a bound in `murphy_plugin_api::__internal::build_cop`
 --> $WORKSPACE/crates/murphy-plugin-api/src/internal.rs
  |
  | pub const fn build_cop<C: NodeCop + Default>() -> PluginCopV1 {
  |                           ^^^^^^^ required by this bound in `build_cop`

error[E0277]: the trait bound `NotACop: Default` is not satisfied
 --> tests/ui/fail_non_cop_type.rs:7:38
  |
7 | murphy_plugin_macros::register_cops!(NotACop);
  |                                      ^^^^^^^ the trait `Default` is not implemented for `NotACop`
  |
note: required by a bound in `murphy_plugin_api::__internal::build_cop`
 --> $WORKSPACE/crates/murphy-plugin-api/src/internal.rs
  |
  | pub const fn build_cop<C: NodeCop + Default>() -> PluginCopV1 {
  |                                     ^^^^^^^ required by this bound in `build_cop`
help: consider annotating `NotACop` with `#[derive(Default)]`
  |
5 + #[derive(Default)]
6 | struct NotACop;
  |
